# rbc-intel

./: .gitignore  AGENTS.md  CLAUDE.md  setup.sh
document_pipeline/: .env.example  .gitignore  pyproject.toml
document_pipeline/docs/: generate_processor_diagrams.py  storage-table-contract.md
document_pipeline/src/ingestion/: main.py
document_pipeline/src/ingestion/connections/: __init__.py  llm.py  postgres.py
document_pipeline/src/ingestion/processors/: docx.py  pdf.py  pptx.py  vision.py  xlsx.py
document_pipeline/src/ingestion/prompts/: dense_table_description.yaml  dense_table_description_merge.yaml  docx_extraction_vision.yaml  extraction_vision.yaml  pdf_extraction_vision.yaml  pptx_extraction_vision.yaml  startup_health_check.yaml
document_pipeline/src/ingestion/stages/: content_preparation.py  (+8 more)
document_pipeline/tests/: conftest.py  helpers.py  test_config.py  test_content_chunker.py  test_content_preparation.py  test_content_preparation_budgeting.py  test_content_preparation_escaping.py  test_content_preparation_modes.py  test_content_preparation_positions.py  test_database.py  test_dense_table_description.py  test_discovery.py  test_docx_processor.py  test_docx_processor_classification.py  test_docx_processor_vision.py  test_enrichment.py  test_extraction.py  test_finalization.py  test_finalization_regressions.py  test_llm.py  test_logging_setup.py  test_main.py  test_models.py  test_oauth.py  test_package_layout.py  test_pdf_processor.py  test_pdf_processor_classification.py  test_pdf_processor_vision.py  test_pptx_processor.py  test_pptx_processor_classification.py  test_pptx_processor_vision.py  test_prompt_loader.py  test_ssl_certificates.py  test_startup.py  test_storage.py  test_table_eda.py  test_table_eda_single_row_regions.py  test_vision.py  test_xlsx_layout.py  test_xlsx_processor.py  (+3 more)
document_pipeline/typings/fitz/: __init__.pyi
document_pipeline/typings/openpyxl/: __init__.pyi
document_pipeline/typings/requests/: __init__.pyi  auth.pyi
research_pipeline/: .env.example  pyproject.toml  run_test_query.py  test_queries.yaml
research_pipeline/db/: setup.py
research_pipeline/db/schemas/: prompts.sql  research_registry.sql
research_pipeline/db/seed/: prompts_seed.sql  registry_seed.sql
research_pipeline/src/research/: __init__.py  api.py
(+87 files in other folders)
